# esp

./: README.md
3D_Print/Dock/: ESP-SparkBot_Dock.STL
3D_Print/ESP_SparkBot/: ESP-SparkBotBody_front.STL  ESP-SparkBot_Body_back.STL  ESP-SparkBot_Camera_back.STL  ESP-SparkBot_Camera_front.STL
3D_Print/Tank/: ESP-SparkTank_Body_btm.STL  ESP-SparkTank_Body_top.STL  ESP-SparkTank_driver_wheel.STL  ESP-SparkTank_idle_wheel.STL  ESP-SparkTank_idle_wheel_cover.STL
example/: README.md
example/bilibili_fans/: CMakeLists.txt  README.md  sdkconfig.defaults
example/bilibili_fans/components/bsp_extra/: idf_component.yml
example/bilibili_fans/components/esp_sparkbot_bsp/: README.md  esp_sparkbot_bsp.c  esp_sparkbot_bsp_idf4.c
example/bilibili_fans/main/: CMakeLists.txt  Kconfig.projbuild  app_wifi.c  app_wifi.h  idf_component.yml  main.c  mmap_generate_audio.h
example/bilibili_fans/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
example/bilibili_fans/main/ui/fonts/: ui_font_PHFont10.c  ui_font_PHFont14.c  ui_font_PHFont16.c  ui_font_PHFont17.c  ui_font_PHFont28.c
example/bilibili_fans/main/ui/images/: ui_img_bilibili_name_2_png.c  ui_img_bilibili_png.c  ui_img_bilibiliname_png.c
example/bilibili_fans/main/ui/screens/: ui_Screen1.c
example/factory_demo_v1/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
example/factory_demo_v1/components/baidu_llm/: CMakeLists.txt
example/factory_demo_v1/components/baidu_llm/include/: baidu.h
example/factory_demo_v1/components/baidu_llm/src/: baidu.c
example/factory_demo_v1/components/esp_sparkbot_bsp/: esp_sparkbot_bsp.c  esp_sparkbot_bsp_idf5.c  idf_component.yml
example/factory_demo_v1/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  mmap_generate_audio.h  mmap_generate_lottie_assets.h  mmap_generate_weather.h
example/factory_demo_v1/main/app/: app_animation.c  app_audio_record.c  app_audio_record.h  app_datafusion.c  app_datafusion.h  app_imu.c  app_imu.h  app_power.c  app_power.h  app_sntp.h  app_weather.c  app_weather.h  app_wifi.c  app_wifi.h
example/factory_demo_v1/main/game_2048/: lv_100ask_2048.c  lv_100ask_2048.h
example/factory_demo_v1/main/tinyGL_cube/: tinyGL_cube.c  tinyGL_cube.h
example/factory_demo_v1/main/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c
example/factory_demo_v1/main/ui/fonts/: ui_font_OPPOSansH18.c  ui_font_OPPOSansL70.c
example/factory_demo_v1/main/ui/images/: ui_img_battery_png.c  ui_img_clody_png.c  ui_img_muyu_png.c  ui_img_wifi_disconnection_png.c  ui_img_wifi_png.c
example/factory_demo_v1/main/ui/screens/: ui_camera.c  ui_dice.c  ui_face.c  ui_fish.c  ui_game.c  ui_home.c  ui_muyuplay.c  ui_net.c  ui_title.c
example/human_face_recognition_no_wakenet/: README.md  partitions.csv  sdkconfig  sdkconfig.defaults
example/human_face_recognition_no_wakenet/components/bsp_extra/: idf_component.yml
example/human_face_recognition_no_wakenet/components/esp_sparkbot_bsp/: CMakeLists.txt  esp_sparkbot_bsp.c  esp_sparkbot_bsp_idf4.c  esp_sparkbot_bsp_idf5.c  idf_component.yml
example/human_face_recognition_no_wakenet/main/: CMakeLists.txt  idf_component.yml  mmap_generate_audio.h
example/human_face_recognition_no_wakenet/main/include/: app_face.hpp  app_lcd.hpp  app_speech.hpp
example/human_face_recognition_no_wakenet/main/src/: app_button.cpp  app_camera.cpp  app_face.cpp  app_lcd.cpp  app_speech.cpp
example/openai-realtime-demo/: CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
example/openai-realtime-demo/components/esp_sparkbot/: .component_hash  .gitignore  CHANGELOG.md  CMakeLists.txt  esp_sparkbot_bsp.c  esp_sparkbot_bsp_idf5.c  idf_component.yml
example/openai-realtime-demo/components/peer/: CMakeLists.txt
example/openai-realtime-demo/src/: CMakeLists.txt  Kconfig.projbuild  OpenAI_logo.c  http.cpp  idf_component.yml  main.cpp  main.h  media.cpp  webrtc.cpp  wifi.cpp
example/tank/c2_tracked_chassis/: CMakeLists.txt  README.md  sdkconfig.defaults
example/tank/c2_tracked_chassis/main/: CMakeLists.txt  tracked_chassis.c
example/tank/sparkbot_motion_control/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
example/tank/sparkbot_motion_control/lottie_assets/: running.json
example/tank/sparkbot_motion_control/main/: CMakeLists.txt  idf_component.yml  mmap_generate_lottie_assets.h  sparkbot_motion_control.c
example/tank/sparkbot_motion_control/main/app/: app_animation.c  app_animation.h  app_sr.c  app_sr.h  app_sr_handler.c  app_sr_handler.h
example/tank/sparkbot_motion_control/main/server/: web_server.c  web_server.h
example/tank/sparkbot_motion_control/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_helpers.h
example/tank/sparkbot_motion_control/main/ui/fonts/: ui_font_ComfortaaBold75.c  ui_font_ComfortaaLight70.c  ui_font_OPPOSansH25.c
example/tank/sparkbot_motion_control/main/ui/screens/: ui_face.c
example/tank/sparkbot_motion_control/web_remote_control/: .eslintrc.js  .gitignore  LICENSE  index.html  package.json  vite.config.mts
example/usb_extend_screen_s3/: sdkconfig  sdkconfig.defaults.esp32s3
example/usb_extend_screen_s3/components/esp_sparkbot_bsp/: esp_sparkbot_bsp.c
example/usb_extend_screen_s3/main/: CMakeLists.txt  app_lcd_s3.c  app_touch.c  app_uac.c  app_vendor.c  idf_component.yml  usb_extend_screen.c
example/usb_extend_screen_s3/main/include/: app_lcd.h  app_usb.h
example/usb_extend_screen_s3/main/usb_device/: usb_descriptors.c  usb_descriptors.h
example/volc_rtc_sparkbot/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
example/volc_rtc_sparkbot/audio_board/: CMakeLists.txt  Kconfig.projbuild
example/volc_rtc_sparkbot/audio_board/esp32_s3_sparkbot/: board.c  board_def.h  board_pins_config.c
example/volc_rtc_sparkbot/components/esp_sparkbot_bsp/: CMakeLists.txt  esp_sparkbot_bsp.c  idf_component.yml
example/volc_rtc_sparkbot/main/: CMakeLists.txt  doubao.c  doubao_head.c  doubao_man.c  idf_component.yml  main.c
(+36 files in other folders)
